--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,3 +46,4 @@ reqwest = { version = "0.12.9", default-features = false, features = [
   "http2",
   "macos-system-configuration",
 ] }
+tempfile = "3.13.0"
