--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,3 +47,6 @@ reqwest = { version = "0.12.9", default-features = false, features = [
   "macos-system-configuration",
 ] }
 tempfile = "3.13.0"
+
+[dev-dependencies]
+rstest = "0.23.0"
