--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,10 +28,9 @@ tracing-subscriber = { version = "0.3.19", features = [
   "default",
   "env-filter",
 ] }
-tracing-log = "0.2.0"
 anyhow = "1.*"
 clap = { version = "4.5.23", features = ["derive", "string"] }
-clap-verbosity-flag = "3.0.2"
+clap-verbosity-flag = { version = "3.0.2", features = ["tracing"] }
 futures = "0.3.31"
 indicatif = "0.17.8"
 rattler = { version = "0.28.0", default-features = false }
