--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,19 +28,19 @@ tracing-subscriber = { version = "0.3.22", features = [
   "default",
   "env-filter",
 ] }
-anyhow = "1.*"
+anyhow = "1.0.100"
 clap = { version = "4.5.53", features = ["derive", "string"] }
 clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
 futures = "0.3.31"
 indicatif = "0.18.3"
-rattler = { version = "0.28.0", default-features = false }
-rattler_digest = "1.0.4"
-rattler_conda_types = "0.29.5"
-rattler_index = "0.19.34"
-rattler_lock = "0.22.34"
-rattler_networking = { version = "0.22.3", default-features = false }
-rattler_package_streaming = { version = "0.22.18", default-features = false }
-rattler_shell = "0.22.10"
+rattler = { version = "0.39.5", default-features = false }
+rattler_digest = "1.2.0"
+rattler_conda_types = "0.42.2"
+rattler_index = "0.27.6"
+rattler_lock = "0.26.7"
+rattler_networking = { version = "0.25.27", default-features = false }
+rattler_package_streaming = { version = "0.23.19", default-features = false }
+rattler_shell = "0.25.13"
 reqwest = { version = "0.12.24", default-features = false, features = [
   "http2",
   "macos-system-configuration",
