--- a/pixi.toml
+++ b/pixi.toml
@@ -8,7 +8,7 @@ build = "cargo build --release"
 test = "cargo test"
 
 [dependencies]
-rust = "1.82.0"
+rust = ">=1.91.0"
 openssl = "*"
 pkg-config = "*"
 
