--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
             os: macos-latest
             cross: false
           - target: x86_64-apple-darwin
-            os: macos-13
+            os: macos-latest
             cross: false
     steps:
       - name: Checkout source code
